--- a/BattleInfoPlugin/BattleInfoPlugin.csproj
+++ b/BattleInfoPlugin/BattleInfoPlugin.csproj
@@ -54,7 +54,7 @@
       <HintPath>..\packages\KanColleViewer.PluginAnalyzer.1.1.1.0\lib\net46\KanColleViewer.PluginAnalyzer.dll</HintPath>
     </Reference>
     <Reference Include="KanColleWrapper">
-      <HintPath>..\..\KanColleViewer\source\Grabacr07.KanColleWrapper\bin\Release\KanColleWrapper.dll</HintPath>
+      <HintPath>DependentAssemblies\KanColleWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Livet, Version=1.3.0.0, Culture=neutral, PublicKeyToken=b0b1d3f711ef38cb, processorArchitecture=MSIL">
       <HintPath>..\packages\LivetCask.2.2.2\lib\net452\Livet.dll</HintPath>
@@ -370,6 +370,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DependentAssemblies\ICSharpCode.SharpZipLib.dll" />
+    <Content Include="DependentAssemblies\KanColleWrapper.dll" />
     <Content Include="DependentAssemblies\SwfFormat.dll" />
     <None Include="Resources\ConfirmPursuit.png" />
   </ItemGroup>
